[tool.poetry]
name = "cipher-docs"
version = "0.1.0"
description = "Canadian Index of Practical Ham Encryption Resources Documentation"
authors = ["CIPHER Contributors"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
Sphinx = "^4.5.0"
sphinx-rtd-theme = "^1.0.0"
sphinx-autobuild = "^2021.3.14"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 
