[tool.poetry]
name = "cipher-docs"
version = "0.1.0"
description = "Canadian Index of Practical Ham Encryption Resources Documentation"
authors = ["CIPHER Contributors"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
Sphinx = "^8.1.3"
sphinx-rtd-theme = "^3.0.2"
sphinx-autobuild = "^2024.10.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 
